# Leaning

Makefile/: .Makefile.swn  .Makefile.swo  .Makefile.swp
Makefile/common/: Makefile
Makefile/common2/: Makefile  mytool1.h
Makefile/common3/: Makefile  main.c  mytool1.c  mytool2.c  mytool2.h
Python/python/http/: httpserver.py  httpserverDemo.py
Python/python/md5py/: douban.txt  testMD5.py  test_MD5.py
Python/python/test_resport/: readme.md  run_main.py
SQL_TEST/: README.md
SQL_TEST/Class/: README.md
SQL_TEST/Class/Class/: Class.pro  Class.pro.user.637d939  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysql.cpp  mysql.h
SQL_TEST/Class/build-Class-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Class  Makefile  Sample.db  moc_mainwindow.cpp  ui_mainwindow.h
SQL_TEST/Test1/Test1/: Test1.pro
SQL_TEST/Test2/build-test2-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile  Sample.db  test2  (+1 more)
SQL_TEST/TestSQL/: README.md  TestSQL.pro  main.cpp
SQL_TEST/Test_class/: README.md
SQL_TEST/build-TestSQL-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile
SQL_TEST/untitled1/: README.md
TCP/: TcpClient.cpp
TCP/build-Tcptest-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile  Tcptest  moc_mainwindow.cpp
TCP/build-timer-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile  processes.txt  timer
tcp demo/Custom/: config.h  customtcpconnectionfactory.h
tcp demo/build-client-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile  client
tcp demo/client/: client.pro  client.pro.user.637d939  main.cpp  mainwindow.ui  myclient.h
test/logtest_/log_C_test/: CMakeLists.txt  logex_test.cpp
(+415 files in other folders)
